force-app/main/default/objects/Account/fields/Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_No__c</fullName>
    <label>Aadhar No.</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>