force-app/main/default/objects/Account/fields/Colours__c.field-meta.xml
<CustomField>
    <fullName>Colours__c</fullName>
    <label>Colours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>BROWN</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>