force-app/main/default/objects/Account/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount_Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>