force-app/main/default/objects/Account/fields/Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_Name__c</fullName>
    <description>Enter The Name</description>
    <label>Individual Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>