force-app/main/default/objects/Account/fields/Masked_Pan__c.field-meta.xml
<CustomField>
    <fullName>Masked_Pan__c</fullName>
    <formula>&quot;*****&quot; &amp; RIGHT( Pan_Number__c , 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masked_Pan</label>
    <type>Text</type>
</CustomField>