force-app/main/default/objects/Account/fields/Org_CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_CEO_Name__c</fullName>
    <description>Enter the organisation Ceo Name</description>
    <label>Org CEO Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>