force-app/main/default/objects/Account/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <description>Enter the Organization Name</description>
    <label>Org Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>