force-app/main/default/objects/Account/fields/Org_Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Org_Pan_No__c</fullName>
    <description>Enter the Pan Number</description>
    <label>Org Pan No</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>