force-app/main/default/objects/Account/fields/Org_Register_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Register_Address__c</fullName>
    <description>Enter The Address</description>
    <label>Org Register Address</label>
    <type>TextArea</type>
</CustomField>