force-app/main/default/objects/Account/fields/Tes2__c.field-meta.xml
<CustomField>
    <fullName>Tes2__c</fullName>
    <label>Tes2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1picklist</valueSetName>
    </valueSet>
</CustomField>