force-app/main/default/objects/Account/fields/X50_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X50_Annual_Revenue__c</fullName>
    <label>50% Annual Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>