force-app/main/default/objects/Account/recordTypes/Organization.recordType-meta.xml
<RecordType>
    <fullName>Organization</fullName>
    <active>false</active>
    <label>Organization</label>
</RecordType>