force-app/main/default/objects/Account/validationRules/Account_Number_is_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_is_numeric</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER( AccountNumber ))</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Enter only number</errorMessage>
</ValidationRule>