force-app/main/default/objects/Account/validationRules/Changing_Account_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Account_Priority</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Priority__c)&amp;&amp; ISPICKVAL(PRIORVALUE(Priority__c), &quot;High&quot;) &amp;&amp; ISPICKVAL(Priority__c, &quot;Low&quot;)</errorConditionFormula>
    <errorMessage>Account priority cannot be changed</errorMessage>
</ValidationRule>